--- a/_sass/_post_page.scss
+++ b/_sass/_post_page.scss
@@ -1,32 +1,42 @@
 @import "variables";
 
 .post-page-container {
-	background-color: white;
-	padding: 40px 35px;
-	/*width: 50vw;
-	max-width: 600px;*/
-	margin: -100px auto 40px;
-	border: $post-container-border;
-	box-shadow: $pink-box-shadow-left;
-	z-index: 100;
-	position: relative;
+	margin: 0 auto;
+	width: 90%;
+	@media (min-width: $sm) {
+		width: 80%;
+	}
+	@media (min-width: $md) {
+		width: 70%;
+	}
+	@media (min-width: $lg) {
+		width: 65%;
+		max-width: 800px;
+	}
+}
+
+.post-page-container-above-image {
+	padding-top: 100px;
+}
+
+.post-page-container-below-image {
+	padding-bottom: 100px;
 }
 
 .post-page-featured-image {
-	height: 50vh;
+	height: 700px;
 	width: 100%;
 	object-fit: cover;
-	opacity: 0;
-	z-index: 0;
+	margin: 50px 0 100px;
 }
 
 .post-page-title {
-
+	font-size: 40px;
 }
 
 .post-page-subheading {
-	font-size: 16px;
-	color: $dark-gray-text;
+	font-size: 18px;
+	color: $light-gray-text;
 	line-height: 32px;
 	margin: 20px 0;
 }
@@ -40,6 +50,14 @@
 }
 
 .content {
+	p {
+		margin-bottom: 2rem;
+	}
+	
+	p, li, span {
+		font-size: 17px;
+	}
+
 	a {
 		text-decoration: underline;
 		color: black;
@@ -53,6 +71,7 @@
 		border-left: 7.5px solid #E9E9E9;
 		padding-left: 20px;
 		margin: 20px 0;
+		font-size: 20px;
 	}
 
 	img {
@@ -62,5 +81,15 @@
 
 	iframe {
 		width: 100%;
+		margin: 30px 0;
 	}
+
+	.button {
+		margin-top: 30px;
+	}
+}
+
+.next-n-prev-post-navigation {
+	text-decoration: underline;
+	margin-top: 100px;
 }
