--- a/_includes/blog_post/first_post.html
+++ b/_includes/blog_post/first_post.html
@@ -1,4 +1,4 @@
-<div class="post-container post-container-large post-first-container">
+<div class="post-container post-first-container">
 	<a href="{{include.post.url}}">
 		<h1 class="post-title post-first-title">{{include.post.title}}</h1>
 		<h3 class="post-subheading post-first-subheading">{{include.post.subheading}}</h3>
