--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -23,7 +23,7 @@
 
 	&:hover {
 		img {
-			@include image-scale-up(1.05);
+			/*@include image-scale-up(1.05);*/
 		}
 	}
 
@@ -36,8 +36,19 @@
 }
 
 .post-first-container {
-	margin-left: 10vw;
 	position: absolute;
+	margin: 0 auto;
+	padding: 50px;
+
+	@include smooth-transition;
+	@media(min-width: $sm) {
+		margin-left: 10vw;
+		width: 50vw;
+	max-width: 600px;
+	}
+	&:hover {
+		margin-top: -10px;
+	}
 }
 
 .post-first-title {
@@ -50,12 +61,6 @@
 	background-color: white;
 	background: #FFFFFF;
 	@include pink-box-shadow-left;
-}
-
-.post-container-large {
-	width: 50vw;
-	max-width: 600px;
-	padding: 50px;
 }
 
 .post-title {
@@ -102,15 +107,33 @@ span {
 
 /* POST CARD - posts below the first post on the blog page */
 
+.bottom-posts-container {
+	padding: 0 30px;
+}
+
 .post-card-container {
 	width: 100%;
 	min-height: 400px;
 	max-height: 600px;
 	margin-top: 80px;
+	flex-direction: column;
+	/*justify-content: center;*/
+	@media (min-width: $md) {
+		flex-direction: row;
+	}
+}
+
+.post-card-first-post-container {
+	height: 70vh;
+	@media (min-width: $md) {
+		flex-direction: row-reverse !important;
+	}
 }
 
 .post-card-image-container {
-	width: 90%;
+	@media (min-width: $md) {
+		width: 90%;
+	}
 	overflow: hidden;
 	&:hover {
 		.post-card-image {
