--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -3,7 +3,7 @@
 .navbar {
 	height: $navbar-height;
 	padding: 10px 20px;
-	color: white;
+	background-color: white;
 	border-bottom: 1px solid $super-light-gray;
 }
 
