--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,6 +11,7 @@ $link-font: 'Apercu Mono';
 
 /* COLORS */
 $super-light-gray: #EAEAEA;
+$light-gray: #979797;
 $light-gray-text: #666666;
 $dark-gray-text: #2E2E2E;
 $pink: #F4D5E2;
