--- a/_sass/_static.scss
+++ b/_sass/_static.scss
@@ -1,5 +1,7 @@
+@import "variables";
+
 .static-container {
-	padding: 200px 0;
+	min-height: calc(100vh - (60px + 100px + 100px));
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
