add motivation page

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -3,8 +3,8 @@
 footer {
 	height: 100px;
 	padding: 10px 0;
-	position: absolute;
- 	bottom: 0;
+	/*position: absolute;
+ 	bottom: 0;*/
 	width: 100%;
 }
 
