--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -59,3 +59,9 @@ p, li {
 	line-height: 30px;
 	color: $light-gray-text;
 }
+
+.page-mini-title {
+	font-family: $paragraph-font;
+	font-size: 30px;
+	margin-bottom: 30px;
+}
