--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -9,54 +9,6 @@
 
 }
 
-/* FIRST POST */
-
-.post-first-subheading {
-	margin-bottom: 20px;
-}
-
-.post-first-image-container {
-	width: 100%;
-	height: 80vh;
-	position: absolute;
-	overflow: hidden;
-
-	&:hover {
-		img {
-			/*@include image-scale-up(1.05);*/
-		}
-	}
-
-	img {
-		width: 100%;
-		height: 100%;
- 		object-fit: cover;
- 		@include smooth-transition;
- 	}
-}
-
-.post-first-container {
-	position: absolute;
-	margin: 0 auto;
-	padding: 50px;
-
-	@include smooth-transition;
-	@media(min-width: $sm) {
-		margin-left: 10vw;
-		width: 50vw;
-	max-width: 600px;
-	}
-	&:hover {
-		margin-top: -10px;
-	}
-}
-
-.post-first-title {
-	&:hover {
-		text-decoration: underline;	
-	}
-}
-
 .post-container {
 	background-color: white;
 	background: #FFFFFF;
@@ -96,49 +48,58 @@ span {
 	margin-right: 5px;
 }
 
-.dashed-line {
-	height: 1px;
-	background-image: linear-gradient(90deg, #000, #000 75%, transparent 75%, transparent 100%);
-	background-size: 20px 1px;
-	border: none;
-	transform: rotate(90deg);
-	/*z-index:-1;*/
-}
-
-/* POST CARD - posts below the first post on the blog page */
-
-.bottom-posts-container {
-	padding: 0 30px;
-}
+/* DEFAULT CARD */
 
 .post-card-container {
 	width: 100%;
 	min-height: 400px;
-	max-height: 600px;
-	margin-top: 80px;
+	margin-bottom: 80px;
 	flex-direction: column;
 	/*justify-content: center;*/
 	@media (min-width: $md) {
 		flex-direction: row;
 	}
+	/* don't add a max-height until the viewport is wide enough that stuff won't be squished*/
+	@media (min-width: $lg) {
+		max-height: 500px;
+	}
 }
 
+/* FIRST POST */
+
 .post-card-first-post-container {
-	height: 70vh;
+	min-height: 70vh;
+	max-height: none;
 	@media (min-width: $md) {
 		flex-direction: row-reverse !important;
+	}
+	.post-card-image-container {
+		@media (min-width: $md) {
+			width: 50%;
+		}
+		@media (min-width: $lg) {
+			width: 60%;
+		}
+	}
+	.post-card-metadata {
+		@media (min-width: $md) {
+			width: 50%;
+		}
+		@media (min-width: $lg) {
+			width: 40%;
+		}
 	}
 }
 
 .post-card-image-container {
-	@media (min-width: $md) {
-		width: 90%;
-	}
 	overflow: hidden;
 	&:hover {
 		.post-card-image {
 			@include image-scale-up(1.1);
 		}
+	}
+	@media (min-width: $md) {
+		width: 50%;
 	}
 }
 
@@ -150,11 +111,19 @@ span {
 }
 
 .post-card-metadata {
-	padding: 50px;
+	padding: 30px;
+	@media (min-width: $md) {
+		padding: 50px;
+		width: 50%;
+	}
 	/*justify-content: space-between;*/
 }
 
 .post-card-title {
+	font-size: 30px;
+	@media(min-width: $md) {
+		font-size: 40px;
+	}
 	&:hover {
 		text-decoration: underline;	
 	}
