--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 .navbar {
-	height: $navbar-height;
+	/*height: $navbar-height;*/
 	padding: 10px 20px;
 	background-color: white;
 	border-bottom: 1px solid $super-light-gray;
