--- a/_sass/_motivation.scss
+++ b/_sass/_motivation.scss
@@ -14,6 +14,11 @@
 .motivation-card {
 	text-align: center;
 	margin-bottom: 30px;
+	&:hover {
+		.motivation-card-image {
+			@include image-scale-up(1.1);
+		}
+	}
 }
 
 .motivation-1 {
@@ -25,11 +30,15 @@
 }
 
 .motivation-2 .motivation-card-image-container {
-	height: 40vh;
+	@media(min-width: $md) {
+		height: 40vh;
+	}
 }
 
 .motivation-3 .motivation-card-image-container {
-	height: 30vh;
+	@media(min-width: $md) {
+		height: 30vh;
+	}
 }
 
 .motivation-card-image-container {
@@ -44,5 +53,6 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	@include smooth-transition;
 	/*margin-bottom: 10px;*/
 }
