--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,10 +5,17 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav mr-auto">
       {% for item in site.menus.header %}
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="{{item.url}}">{{item.title}}</a>
+        </li>
+      {% endfor %}
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      {% for link in site.data.social_media %}
+        <li class="nav-item">
+          {% include social_media_icon_renderer.html link=link %}
         </li>
       {% endfor %}
     </ul>
