--- a/_includes/social_media_icon_renderer.html
+++ b/_includes/social_media_icon_renderer.html
@@ -1,9 +1,7 @@
-<div id="contact-links" class="links-container">
-	{% for link in site.data.social_media %}
-	{% if link.url and link.url != "" and link.url != nil %}
-		<a class="contact-icon" target="_blank" href="{{link.url}}">
-		    <i class="
-		        {% case link.type %}
+{% if include.link.url and include.link.url != "" and include.link.url != nil %}
+	<a class="contact-icon" target="_blank" href="{{include.link.url}}">
+	    <i class="
+	        {% case include.link.type %}
 					  {% when 'Twitter' %}
 					     fab fa-twitter
 					  {% when 'Facebook' %}
@@ -22,9 +20,7 @@
 					    fab fa-snapchat-ghost
 					  {% when 'Discord' %}
 					    fab fa-discord
-					{% endcase %}
-				"></i>
-			</a>
-		{% endif %}
-	{% endfor %}
-</div>
+				{% endcase %}
+			"></i>
+	</a>
+{% endif %}
