--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -136,3 +136,45 @@ span {
 .post-card-read-more-btn {
 	margin-top: 20px;
 }
+
+.first-post-background {
+	top: 0;
+	position: absolute;
+	height: 60vh;
+	width: 100%;
+	z-index: -10;
+	background-color: #FDF7F9;
+}
+
+.first-post-title {
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.first-post-subheading {
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.first-post-image-container {
+	margin: 40px 0 50px;
+	width: 100%;
+	height: 70vh;
+	overflow: hidden;
+	background-color: white;
+	@include pink-box-shadow-left;
+}
+
+.first-post-image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.first-post-date-n-tags {
+	justify-content: center;
+}
+
+.first-post-content {
+	margin-bottom: 100px;
+}
