--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -6,7 +6,7 @@ html, body {
 	padding: 0;
 	margin: 0;
   position: relative;
-	background-color: #F9FAFA;
+	/*background-color: #F9FAFA;*/
 }
 
 main {
