--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -5,8 +5,9 @@
 		{% include nav.html %}
 		<main id="swup" class="transition-fade">
 			{{content}}
-			{% include footer.html %}
+			{% include blog_post/newsletter.html %}
 		</main>
+		{% include footer.html %}
 	</body>
 	{% include scripts.html %}
 </html>
