--- a/assets/css/main_css_file.scss
+++ b/assets/css/main_css_file.scss
@@ -6,6 +6,7 @@
 @import "blog";
 @import "nav";
 @import "footer";
-@import "static";
+@import "about";
 @import "newsletter";
 @import "motivation";
+@import "home";
