--- a/_includes/motivation/card.html
+++ b/_includes/motivation/card.html
@@ -1,4 +1,9 @@
-<div class="motivation-card-image-container">
-	<img class="motivation-card-image lazy" src="/assets/images/lazy.jpg" data-src="{{include.item.image}}">
-</div>
-<span>{{ include.item.date | date_to_string }}</span>
+<a href="{{include.item.url}}">
+	<div class="motivation-card pink-box-shadow-left w-100">
+		<img class="lazy w-100 h-100" src="/assets/images/lazy.jpg" data-src="{{include.item.image}}">
+		<div class="inspiration-card-text">
+			<p class="inspiration-quote">{{ include.item.quote }}</p>
+			<p class="inspiration-author">{{ include.item.author }}</p>
+		</div>
+	</div>
+</a>
