--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -143,7 +143,7 @@ span {
 	height: 60vh;
 	width: 100%;
 	z-index: -10;
-	background-color: #FDF7F9;
+	background-color: $pink-bg-color;
 }
 
 .first-post-title {
@@ -159,7 +159,7 @@ span {
 .first-post-image-container {
 	margin: 40px 0 50px;
 	width: 100%;
-	height: 70vh;
+	height: auto;
 	overflow: hidden;
 	background-color: white;
 	@include pink-box-shadow-left;
