--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,31 +1,58 @@
 @import "variables";
 
 footer {
-	height: 100px;
-	padding: 10px 0;
-	/*position: absolute;
- 	bottom: 0;*/
+	padding: 50px 30px 0;
 	width: 100%;
+	border-top: 1px solid $super-light-gray;
+	margin-top: 50px;
 }
 
-.footer-container {
-	width: 80vw;
-	margin: 0 auto;
+.footer-content {
+	flex-direction: column;
+	align-items: center;
+	@media (min-width: $md) {
+		flex-direction: row;
+		justify-content: center;
+	}
 }
 
-#footer-content {
-	justify-content: space-between;
+#footer-logo {
+	height: 100px;
+	width: 100px;
+	img {
+		height: 100%;
+		width: 100%;
+		object-fit: cover;
+	}
 }
+
+.footer-logo-n-links {
+
+}
+
+footer .contact-icon {
+	color: $light-gray-text;
+	font-size: 18px;
+	padding: 10px 0 5px 10px;
+	margin-right: 0;
+}
+
+.footer-links {
+	list-style-type: none;
+}
+
+.footer-newsletter {
+	padding: 40px;
+	width: 100%;
+	@media (min-width: $md) {
+		width: 40%;
+	}
+}
+
 
 #copyright {
-	font-size: 15px;
-	color: $light-gray-text;
-	margin-top: 10px;
-}
-
-.contact-icon {
-	color: $light-gray-text;
-	font-size: 20px;
-	padding: 10px;
-	margin-right: 10px;
+	font-size: 12px;
+	color: $light-gray;
+	margin-top: 20px;
+	text-align: center;
 }
