--- a/_sass/_motivation.scss
+++ b/_sass/_motivation.scss
@@ -13,46 +13,52 @@
 
 .motivation-card {
 	text-align: center;
-	margin-bottom: 30px;
-	&:hover {
-		.motivation-card-image {
-			@include image-scale-up(1.1);
-		}
+	margin: 0 15px 30px;
+	min-height: 700px;
+	height: 70vh;
+	max-height: 1000px;
+	position: relative;
+	padding: 0;
+	background-color: $dark-gray-text;
+	img {
+		object-fit: cover;
+		filter: brightness(0.5);
 	}
 }
 
-.motivation-1 {
-	width: 100%;
+.inspiration-card-text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-.motivation-1 .motivation-card-image-container {
-	height: 60vh;
+.inspiration-quote {
+	font-family: $paragraph-font;
+	color: white;
+	font-size: 32px;
+	line-height: 50px;
 }
 
-.motivation-2 .motivation-card-image-container {
-	@media(min-width: $md) {
-		height: 40vh;
-	}
+.motivation-1 .inspiration-quote {
+	
 }
 
-.motivation-3 .motivation-card-image-container {
-	@media(min-width: $md) {
-		height: 30vh;
-	}
+.motivation-2 .inspiration-quote {
+	font-size: 25px;
+	line-height: 40px;
 }
 
-.motivation-card-image-container {
-	width: 100%;
-	overflow: hidden;
-	@include pink-box-shadow-left;
-	margin-bottom: 30px;
-	background-color: white;
+.inspiration-author {
+	text-transform: uppercase;
+	font-family: $link-font;
+	color: white;
+	font-size: 14px;
+	letter-spacing: 2px;
 }
 
-.motivation-card-image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	@include smooth-transition;
-	/*margin-bottom: 10px;*/
+/* INDIVIDUAL MOTIVATION PAGE */
+.share-bar {
+	padding: 30px 0;
+	text-align: center;
 }
