--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -2,7 +2,7 @@
 
 .navbar {
 	/*height: $navbar-height;*/
-	padding: 10px 20px;
+	padding: 10px 80px;
 	background-color: white;
 	border-bottom: 1px solid $super-light-gray;
 }
@@ -14,21 +14,36 @@
 	letter-spacing: 0;
 	/*font-size: 12px;*/
 	/*text-transform: uppercase;*/
-
+	margin-right: 20px;
 }
 
-.nav-item {
+#navbar-logo {
+	width: 50px;
+	height: 50px;
 	margin-right: 10px;
 }
 
+.nav-item {
+	/*margin-right: 10px;*/
+}
+
 .nav-link {
-	font-size: 13px;
+	font-size: 14px;
 	font-family: $link-font;
 	text-transform: uppercase;
-	letter-spacing: 1.32px;
-	color: #000000;
+	letter-spacing: 2px;
+	color: $light-gray-text !important; 
+	&:hover {
+		color: $vivid-pink !important;
+	}
 }
 
 .nav-item.active .nav-link {
 	/*border-bottom: 1px solid black;*/
+}
+
+.nav-item .contact-icon {
+	padding: 10px 5px;
+	font-size: 20px;
+	color: $vivid-pink;
 }
