--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
         </li>
       {% endfor %}
     </ul>
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto nav-social-links">
       {% for link in site.data.social_media %}
         <li class="nav-item">
           <a href="{{link.url}}" target="_blank">
