--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 			</div>
 			<ul class="footer-links footer-nav-links">
 				{% for item in site.menus.header %}
-					<li><a href="{{item.url}}">{{item.title}}</a></li>
+					<li><a href="{{item.url}}"><span>{{item.title}}</span></a></li>
 				{% endfor %}
 			</ul>
 			<ul class="footer-links footer-social-media">
