--- a/_layouts/motivation_item.html
+++ b/_layouts/motivation_item.html
@@ -6,10 +6,14 @@ layout: default
 	<h5 class="page-mini-title">Daily Inspiration</h5>
 	<h1 class="page-title">{{page.date | date: "%B %d, %Y" }}</h1>
 	<div class="w-100">
-		{% include motivation/card.html item=site.motivation.first %}
+		{% include motivation/card.html quote=page.quote author=page.author image=page.image url=page.url %}
 	</div>
 	<div class="share-bar">
 		<h4>Share this</h4>
 		{% include share-icons.html %}
 	</div>
 </div>
+
+<script>
+	$('img').unveil();
+</script>
