--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,9 @@
 <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@13.0.1/dist/lazyload.min.js"></script>
 <script src="/assets/js/unveil.js"></script>
+<!-- <script src="//unpkg.com/jscroll/dist/jquery.jscroll.min.js"></script> -->
+<script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.min.js"></script>
+
 <!-- <script src="/assets/js/swup.min.js" type="text/javascript"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
