--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,7 +1,7 @@
 @import "variables";
 .about-content {
 	text-align: center;
-	padding: 70px 20px 30px;
+	padding: 70px 20px 0;
 	margin: 0 auto;
 	@include container-widths;
 	img {
