--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -10,7 +10,9 @@ footer {
 .footer-content {
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
 	@media (min-width: $md) {
+		text-align: left;
 		flex-direction: row;
 		justify-content: center;
 	}
@@ -19,6 +21,9 @@ footer {
 #footer-logo {
 	height: 100px;
 	width: 100px;
+	@media (max-width: $md) {
+		margin-bottom: 20px;
+	}
 	img {
 		height: 100%;
 		width: 100%;
@@ -39,16 +44,10 @@ footer .contact-icon {
 
 .footer-links {
 	list-style-type: none;
-}
-
-.footer-newsletter {
-	padding: 40px;
-	width: 100%;
-	@media (min-width: $md) {
-		width: 40%;
+	@media (max-width: $md) {
+		padding-left: 0;
 	}
 }
-
 
 #copyright {
 	font-size: 12px;
