add home carousel

--- a/_includes/blog_post/card.html
+++ b/_includes/blog_post/card.html
@@ -1,4 +1,4 @@
-<div class="post-container post-card-container d-flex {{include.container_class}}">
+<div class="post-card-container d-flex {{include.container_class}}">
 	<a class="post-card-image-container" href="{{include.post.url}}">
 		<img src="/assets/images/lazy.jpg" data-src="{{include.post.featured_image}}" class="lazy post-card-image">
 	</a>
