--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="first-post-background"></div>
+<div class="pink-background"></div>
 <div class="container">
 	<h1 class="page-title">{{page.title}}</h1>
 	<div class="w-100">
