--- a/_layouts/motivation_item.html
+++ b/_layouts/motivation_item.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="first-post-background"></div>
+<div class="pink-background"></div>
 <div class="container">
 	<h5 class="page-mini-title">Daily Inspiration</h5>
 	<h1 class="page-title">{{page.date | date: "%B %d, %Y" }}</h1>
