--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,18 +1,9 @@
 @import "variables";
 
-#hero {
- 	/*background-repeat: no-repeat;
- 	background-position: center;
- 	background-attachment: fixed;*/
- 	height: 80vh;
- 	position: relative;
-
-}
-
-.post-container {
-	background-color: white;
-	background: #FFFFFF;
-	@include pink-box-shadow-left;
+.pink-bg-blog {
+	@media (max-width: $md) {
+		display: none;
+	}
 }
 
 .post-title {
@@ -51,9 +42,18 @@ span {
 /* DEFAULT CARD */
 
 .post-card-container {
+	background-color: white;
 	width: 100%;
 	min-height: 400px;
 	flex-direction: column;
+
+	@include pink-box-shadow-left;
+	@media (max-width: $md) {
+		text-align: center;
+		justify-content: center;
+		align-items: center;
+	}
+
 	/*justify-content: center;*/
 	@media (min-width: $md) {
 		flex-direction: row;
@@ -138,6 +138,9 @@ span {
 
 .post-card-read-more-btn {
 	margin-top: 20px;
+	@media (max-width: $md) {
+	    margin: 20px auto 0;
+	  }
 }
 
 .first-post-title {
@@ -171,4 +174,8 @@ span {
 
 .first-post-content {
 	/*margin-bottom: 100px;*/
+}
+
+.blog-content {
+	padding: 0 30px;
 }
