--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,15 +1,67 @@
 .carousel-item {
-	height: 70vh;
+	height: 60vh;
+	min-height: 400px;
+	@media (min-width: $lg) {
+		min-height: 600px;		
+	}
+	position: relative;
+	text-align: center;
+	background-color: $light-gray;
 	img {
 		object-fit: cover;
+		filter: brightness(0.7);
 	}
 }
 
-.jumbotron {
-	background-color: transparent;
+.carousel-text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+
+	width: 75%;
+	@media (min-width: $md) {
+		width: 90%;
+	}
+	@media (min-width: $lg) {
+		width: 60%;
+	}
+}
+
+.carousel-mini-title {
+	margin-bottom: 10px;
+}
+
+.carousel-title {
+	margin-bottom: 10px;
+	font-size: 30px;
+	@media (min-width: $md) {
+		margin-bottom: 20px;
+		font-size: 42px;
+	}
+}
+
+.carousel-description {
+	color: white;
+	opacity: 0.9;
+	font-size: 17px;
+	margin-bottom: 50px;
+	@media (min-width: $md) {
+		font-size: 20px;
+		margin-bottom: 60px;
+	}
+}
+
+.carousel-button {
+	width: 200px !important;
+	padding: 20px 30px;
 }
 
 .home-section-text {
+	@media (max-width: $md) {
+		text-align: center;
+	}
 	p {
 		margin-bottom: 50px;
 	}
@@ -17,7 +69,10 @@
 
 .home-section-image-container {
 	/*height: auto;*/
-	margin: 0 30px;
+	margin: 0 30px 50px;
+	@media (min-width: $md) {
+		margin-bottom: 0;
+	}
 	img {
 		height: 100%;
 		width: 100%;
@@ -44,4 +99,8 @@ section {
 
 .home {
 	padding-bottom: 50px;
+}
+
+.home-container {
+	padding: 0 30px;
 }
