--- a/_sass/_motivation.scss
+++ b/_sass/_motivation.scss
@@ -2,13 +2,16 @@
 
 .motivation-card {
 	text-align: center;
-	margin: 0 15px 30px;
-	min-height: 700px;
+	margin: 0 15px 50px;
+	min-height: 600px;
 	height: 70vh;
 	max-height: 1000px;
 	position: relative;
 	background-color: $dark-gray-text;
 	overflow: hidden;
+	@media (min-width: $md) {
+		margin-bottom: 30px;
+	}
 	img {
 		object-fit: cover;
 		filter: brightness(0.7);
@@ -39,6 +42,7 @@
 
 .inspiration-row {
 	margin-right: 0;
+	padding: 0 15px;
 }
 
 .inspiration-quote {
@@ -74,4 +78,8 @@
 .share-bar {
 	padding: 30px 0;
 	text-align: center;
+}
+
+.home-inspiration {
+	margin-right: 0;
 }
