make title pink

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -12,9 +12,9 @@
 
 .navbar-brand {
 	font-family: $title-font;
-	color: #000000;
+	color: $vivid-pink !important;
 	letter-spacing: 0;
-	margin-right: 20px;
+	margin-right: 10px;
 }
 
 #navbar-logo {
