get ready for forestry - move pages into blocks and sections - use unveil2.js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer>
 	<div class="footer-content d-flex">
 		<div id="footer-logo">
-			<img src="/assets/images/lazy.jpg" data-src="/assets/images/logo-circle.png" class="lazy">
+			<img src="{{site.data.general.logo.footer}}" class="lazy">
 		</div>
 		<ul class="footer-links footer-nav-links">
 			{% for item in site.menus.header %}
