--- a/assets/css/main_css_file.scss
+++ b/assets/css/main_css_file.scss
@@ -6,7 +6,7 @@
 @import "blog";
 @import "nav";
 @import "footer";
-@import "about";
 @import "newsletter";
 @import "motivation";
 @import "home";
+@import "static";
