--- a/_includes/blog_post/card.html
+++ b/_includes/blog_post/card.html
@@ -1,6 +1,6 @@
 <div class="post-card-container d-flex {{include.container_class}}">
 	<a class="post-card-image-container" href="{{include.post.url}}">
-		<img src="/assets/images/lazy.jpg" data-src="{{include.post.featured_image}}" class="lazy post-card-image">
+		<img src="{{include.post.featured_image}}" class="lazy post-card-image">
 	</a>
 	<div class="post-card-metadata d-flex flex-column justify-content-center">
 		<div class="post-date-n-tags post-card-date-n-tags">
