--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/">
-    <img id="navbar-logo" class="lazy" src="/assets/images/lazy.jpg" data-src="/assets/images/logo-circle.png">
+    <img id="navbar-logo" class="lazy" src="{{site.data.general.logo.navigation}}">
     {{site.title}}
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
