--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,7 @@
 <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@13.0.1/dist/lazyload.min.js"></script>
-<script src="/assets/js/unveil.js"></script>
+<!-- <script src="/assets/js/unveil.js"></script> -->
+<script src="/assets/js/unveil2.min.js"></script>
 <!-- <script src="//unpkg.com/jscroll/dist/jquery.jscroll.min.js"></script> -->
 <script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.min.js"></script>
 
