--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -140,3 +140,44 @@ hr {
 .container-widths {
   @include container-widths;
 }
+
+.content {
+  p {
+    margin-bottom: 2rem;
+  }
+  
+  p, li, span {
+    font-size: 17px;
+  }
+
+  a {
+    text-decoration: underline;
+    color: black;
+  }
+
+  h2, h3 {
+    margin: 40px 0 15px;
+  }
+
+  blockquote {
+    border-left: 7.5px solid #E9E9E9;
+    padding-left: 20px;
+    margin: 20px 0;
+    font-size: 20px;
+  }
+
+  img {
+    width: 100%;
+    margin-bottom: 20px;
+    @include pink-box-shadow-left;
+  }
+
+  iframe {
+    width: 100%;
+    margin: 30px 0;
+  }
+
+  .button {
+    margin-top: 30px;
+  }
+}
