--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -18,9 +18,14 @@
 }
 
 #navbar-logo {
-	width: 50px;
-	height: 50px;
-	margin-right: 10px;
+	width: 30px;
+	height: 30px;
+	margin-right: 5px;
+	@media (min-width: $md) {
+		width: 50px;
+		height: 50px;
+		margin-right: 10px;
+	}
 }
 
 .nav-item {
